// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TheHeader (Authenticated Admin) Properly renders 1`] = `
<div>
  <mobileheader-stub
    class="hidden-sm-and-up"
    items="[object Object]"
  />
   
  <vappbar-stub
    app="true"
    color="#b05454"
    dark="true"
    elevateonscroll="true"
    extensionheight="48"
    src=""
    tag="header"
    tile="true"
    value="true"
  >
    <span
      aria-label="open navigation drawer"
      class="hidden-sm-and-up"
    >
      <font-awesome-icon-stub
        class="drawer-icon"
        icon="fal,bars"
      />
    </span>
     
    <vtoolbartitle-stub
      class="app-nav-header"
    >
      <img
        alt="Logo"
        class="tv-logo"
        src="../../assets/rpitv_logo_400.png"
      />
    </vtoolbartitle-stub>
     
    <vtoolbaritems-stub
      class="hidden-xs-only"
    >
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/"
          title="Home"
        />
      </div>
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/productions"
          title="Productions"
        />
      </div>
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/contact"
          title="Contact Us"
        />
      </div>
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/about"
          title="About"
        />
      </div>
    </vtoolbaritems-stub>
     
    <div
      class="app-nav-right-items"
    >
      <vtoolbaritems-stub
        class="hidden-xs-only"
      >
        <div
          class="item-wrapper hidden-sm-only"
        >
          <!---->
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <!---->
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <!---->
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <headerdropdown-stub
            class="hidden-sm-only"
            depth="0"
            items="[object Object],[object Object]"
            title="undefined@rpi.edu"
          />
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <headerbutton-stub
            class="hidden-sm-only"
            path="/logout"
            title="Logout"
          />
        </div>
        <div
          class="item-wrapper hidden-md-and-up hidden-xs-only"
        >
          <headerdropdown-stub
            class="hidden-md-and-up hidden-xs-only"
            depth="0"
            items="[object Object],[object Object],[object Object],[object Object],[object Object]"
            title="More"
          />
        </div>
      </vtoolbaritems-stub>
    </div>
  </vappbar-stub>
</div>
`;

exports[`TheHeader (Authenticated User) Properly renders 1`] = `
<div>
  <mobileheader-stub
    class="hidden-sm-and-up"
    items="[object Object]"
  />
   
  <vappbar-stub
    app="true"
    color="#b05454"
    dark="true"
    elevateonscroll="true"
    extensionheight="48"
    src=""
    tag="header"
    tile="true"
    value="true"
  >
    <span
      aria-label="open navigation drawer"
      class="hidden-sm-and-up"
    >
      <font-awesome-icon-stub
        class="drawer-icon"
        icon="fal,bars"
      />
    </span>
     
    <vtoolbartitle-stub
      class="app-nav-header"
    >
      <img
        alt="Logo"
        class="tv-logo"
        src="../../assets/rpitv_logo_400.png"
      />
    </vtoolbartitle-stub>
     
    <vtoolbaritems-stub
      class="hidden-xs-only"
    >
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/"
          title="Home"
        />
      </div>
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/productions"
          title="Productions"
        />
      </div>
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/contact"
          title="Contact Us"
        />
      </div>
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/about"
          title="About"
        />
      </div>
    </vtoolbaritems-stub>
     
    <div
      class="app-nav-right-items"
    >
      <vtoolbaritems-stub
        class="hidden-xs-only"
      >
        <div
          class="item-wrapper hidden-sm-only"
        >
          <!---->
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <!---->
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <!---->
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <headerdropdown-stub
            class="hidden-sm-only"
            depth="0"
            items="[object Object],[object Object]"
            title="undefined@rpi.edu"
          />
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <headerbutton-stub
            class="hidden-sm-only"
            path="/logout"
            title="Logout"
          />
        </div>
        <div
          class="item-wrapper hidden-md-and-up hidden-xs-only"
        >
          <headerdropdown-stub
            class="hidden-md-and-up hidden-xs-only"
            depth="0"
            items="[object Object],[object Object],[object Object],[object Object],[object Object]"
            title="More"
          />
        </div>
      </vtoolbaritems-stub>
    </div>
  </vappbar-stub>
</div>
`;

exports[`TheHeader (Unauthenticated) Properly renders 1`] = `
<div>
  <mobileheader-stub
    class="hidden-sm-and-up"
    items="[object Object]"
  />
   
  <vappbar-stub
    app="true"
    color="#b05454"
    dark="true"
    elevateonscroll="true"
    extensionheight="48"
    src=""
    tag="header"
    tile="true"
    value="true"
  >
    <span
      aria-label="open navigation drawer"
      class="hidden-sm-and-up"
    >
      <font-awesome-icon-stub
        class="drawer-icon"
        icon="fal,bars"
      />
    </span>
     
    <vtoolbartitle-stub
      class="app-nav-header"
    >
      <img
        alt="Logo"
        class="tv-logo"
        src="../../assets/rpitv_logo_400.png"
      />
    </vtoolbartitle-stub>
     
    <vtoolbaritems-stub
      class="hidden-xs-only"
    >
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/"
          title="Home"
        />
      </div>
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/productions"
          title="Productions"
        />
      </div>
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/contact"
          title="Contact Us"
        />
      </div>
      <div
        class="item-wrapper"
      >
        <headerbutton-stub
          class=""
          path="/about"
          title="About"
        />
      </div>
    </vtoolbaritems-stub>
     
    <div
      class="app-nav-right-items"
    >
      <vtoolbaritems-stub
        class="hidden-xs-only"
      >
        <div
          class="item-wrapper hidden-sm-only"
        >
          <headerbutton-stub
            class="hidden-sm-only"
            path="/join"
            title="Join The Club"
          />
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <headerbutton-stub
            class="hidden-sm-only"
            path="/donate"
            title="Donate"
          />
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <headerbutton-stub
            class="hidden-sm-only"
            path="/login"
            title="Login"
          />
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <!---->
        </div>
        <div
          class="item-wrapper hidden-sm-only"
        >
          <!---->
        </div>
        <div
          class="item-wrapper hidden-md-and-up hidden-xs-only"
        >
          <headerdropdown-stub
            class="hidden-md-and-up hidden-xs-only"
            depth="0"
            items="[object Object],[object Object],[object Object],[object Object],[object Object]"
            title="More"
          />
        </div>
      </vtoolbaritems-stub>
    </div>
  </vappbar-stub>
</div>
`;
